ToyStories_Header: Addinh navbar

--- a/apps/toy-stories/src/styles.scss
+++ b/apps/toy-stories/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.google.com/specimen/Lato?query=Łukasz+Dziedzic&category=Sans+Serif,Monospace&subset=latin);
+.root{
+  //Colors
+  --MAIN-LIHGHT-ORANGE-COLOR: #FF8789;
+  --PINK-COLOR: #E973AB;
+  --DARK-BROWN: #574141;
+  --LIGHT-BLUE: #BFFBFF;
+  --DARK-BLUE: #005B8C;
+  --GREEN: #457F8C;
+
+  //FONTS
+
+  --BASE-FONT:"Lato"
+
+
+}
