--- a/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.scss
+++ b/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.scss
@@ -6,7 +6,7 @@ html {
 .header__wraper {
   display:flex;
   background-color: #ff878953;
-border-radius: 10px;
+//border-radius: 10px;
 font-family:"Lato";
 font-size: 1.2em;
 font-weight: bold;
