feat(header): change layout and make it more responsive

--- a/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.html
+++ b/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.html
@@ -1,25 +1,28 @@
-<div class="header__wraper">
-  <div class="header__logo">
-    <img class="header__logo--img"
+<div class="header__wrapper">
+  <div class="logo">
+    <img class="logo__img"
     src="../../../../assets/img/Toy stories logo.png"
-    alt="Toy Stories" class="header__logo--img">
+    alt="Toy Stories">
     <!-- <div class="header__logo--text">Don't let this story ends.</div> -->
   </div>
-  <div class="header__nav">
-    <nav class="header__nav--nav">
-      <ul class="header__nav--ul">
-        <li><a class="header__nav--a" href=#>Home</a></li>
-        <li><a class="header__nav--a" href=#>About</a></li>
-        <li><a class="header__nav--a" href=#>New Stories</a></li>
-        <li><a class="header__nav--a" href=#>Contact</a></li>
+  <div class="menu">
+    <nav class="nav">
+      <ul class="nav__ul">
+        <li><a class="nav__a" href=#>Home</a></li>
+
+        <li><a class="nav__a" href=#>About</a></li>
+
+        <li><a class="nav__a" href=#>Contact</a></li>
+
+        <li><a class="nav__a" href=#>New Stories</a></li>
+
       </ul>
     </nav>
   </div>
-  <div class="header__login">
-    <ul class="header__login--ul">
-      <li><a class="header__login--a" href=# >Login</a></li>
-      <li><a class="header__login--a" href=#>Sign up</a></li>
-    </ul>
+  <div class="login">
+      <button type="button" class="login__btn">Login</button>
+      <button type="button" class="login__btn">Sign up</button>
+
   </div>
 
 </div>
