--- a/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.scss
+++ b/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.scss
@@ -1,66 +1,150 @@
-@import url(https://fonts.google.com/specimen/Lato?query=Łukasz+Dziedzic&category=Sans+Serif,Monospace&subset=latin);
-
-html {
-  box-sizing: border-box;
+.header__wrapper {
+  display: flex;
+  background-color: #ff87893c;
+  border-radius: 10px;
+  font-size: 1.2em;
+  font-weight: bold;
+  width: 90%;
+  margin: auto;
+  max-width: 1050px;
 }
-.header__wraper {
-  display:flex;
-  background-color: #ff878953;
-//border-radius: 10px;
-font-family:"Lato";
-font-size: 1.2em;
-font-weight: bold;
-}
+//Logo in the left corner
 
-
-.header__logo {
+.logo {
   margin-left: 0;
   margin-right: auto;
-}
+  flex:1;
 
-.header__logo--img{
-  max-width: 120px;
-  border-radius: 50%;
+  &__img {
+   max-width: 120px;
+  border-radius: 66% 16% 53% 24%; // Irregular shape
   height: auto;
   margin-left: 15px;
   position: relative;
   top: 50%;
- ;
   transform: translateY(-50%);
+  border-style: solid;
+  border-width: 2px;
+  }
 }
 
-.header__nav {
-  display: flex;
+//menu in the middle
 
+.menu {
+  display: flex;
+  flex: 4;
+
+  .nav {
+    width: auto;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+
+    &__a {
+      text-decoration: none;
+      padding: 10px;
+      color: #41403e;
+      align-self: center;
+      background-color: rgba(255, 135, 137, 0.498);
+      background-image: none;
+      background-position: 0 90%;
+      background-repeat: repeat no-repeat;
+      background-size: 4px 3px;
+      border-style: solid;
+      border-width: 2px;
+      box-sizing: border-box;
+      color: #41403e;
+      cursor: pointer;
+      display: inline-block;
+      font-family: Neucha, sans-serif;
+      font-size: 1rem;
+      font-weight: bold;
+      line-height: 23px;
+      outline: none;
+      padding: 0.75rem;
+      text-decoration: none;
+      transition: all 235ms ease-in-out;
+      border-bottom-left-radius: 15px 255px;
+      border-bottom-right-radius: 225px 15px;
+      border-top-left-radius: 255px 15px;
+      border-top-right-radius: 15px 225px;
+    }
+    &__a:hover {
+      box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+      transform: translate3d(0, 2px, 0);
+    }
+     &v__a:focus {
+      box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+    }
+
+
+    &__ul {
+      display: flex;
+      font-family: Neucha, sans-serif;
+      font-weight: bold;
+      list-style-type: none;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 80%;
+      white-space: nowrap;
+
+
+
+    }
+  }
 }
-.header__nav--nav{
-  width: auto;
-  padding: 10px;
-  display: flex;
-gap: 30px;
 
+// Login/Sign up section in the right corner
 
-}
-.header__nav--ul{
+.login {
   display: flex;
-}
-
-.header__nav--ul, .header__login--ul {
-  list-style-type: none;
-  display: flex;
+  flex:1;
+  margin: auto;
   justify-content: space-evenly;
-  gap: 5em;
-  align-items: center;
+  white-space: nowrap;
+  margin-right: 15px;
+
+  &__btn {
+    align-self: center;
+    background-color: #5dafc2;
+    background-image: none;
+    background-position: 0 90%;
+    background-repeat: repeat no-repeat;
+    background-size: 4px 3px;
+   // border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+    border-style: solid;
+    border-width: 2px;
+   // box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+    box-sizing: border-box;
+    color: #41403e;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Neucha, sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 23px;
+    outline: none;
+    padding: .75rem;
+    text-decoration: none;
+    transition: all 235ms ease-in-out;
+    border-bottom-left-radius: 15px 255px;
+    border-bottom-right-radius: 225px 15px;
+    border-top-left-radius: 255px 15px;
+    border-top-right-radius: 15px 225px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  &__btn:hover {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+    transform: translate3d(0, 2px, 0);
+  }
+  &__btn:focus {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+  }
 }
 
-.header__nav--a, .header__login--a  {
-  text-decoration: none;
-  padding: 10px;
-}
 
-.header__login{
-display: flex;
-margin-right: 0;
-margin-left: auto;
-padding: 10px;
-}
+
+
