--- a/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.scss
+++ b/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.scss
@@ -73,7 +73,7 @@
       box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
       transform: translate3d(0, 2px, 0);
     }
-     &v__a:focus {
+     &__a:focus {
       box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
     }
 
