feat(ToyStories): Add Footet, Hero and CategoriesList section

--- a/apps/toy-stories/src/app/app.component.html
+++ b/apps/toy-stories/src/app/app.component.html
@@ -1,15 +1,4 @@
-<<<<<<< Updated upstream
-<div style="text-align: center">
-  <h1>Welcome to toy-stories!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-    alt="Nx - Smart, Fast and Extensible Build System"
-  />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
-=======
 <ts-header></ts-header>
 <ts-hero></ts-hero>
+<ts-categories-list></ts-categories-list>
 <ts-footer></ts-footer>
->>>>>>> Stashed changes
