--- a/apps/toy-stories/src/app/homepage/cointeiners/footer/footer.component.scss
+++ b/apps/toy-stories/src/app/homepage/cointeiners/footer/footer.component.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   flex-wrap: nowrap;
   width: 90%;
-  margin: auto;
+  margin: 70px auto 0 auto;
   max-width: 1050px;
   position: relative;
   height: auto;
@@ -62,46 +62,3 @@
     }
   }
 }
-/* @media only screen and (min-width: 1280px) {
-  .contain {
-    width: 1200px;
-    margin: 0 auto;
-  }
-}
-@media only screen and (max-width: 1139px) {
-  .contain .social {
-    width: 1000px;
-    display: block;
-  }
-  .social h1 {
-    margin: 0px;
-  }
-}
-@media only screen and (max-width: 950px) {
-  .footer .col {
-    width: 33%;
-  }
-  .footer .col h1 {
-    font-size: 14px;
-  }
-  .footer .col ul li {
-    font-size: 13px;
-  }
-}
-@media only screen and (max-width: 500px) {
-    .footer .col {
-      width: 50%;
-    }
-    .footer .col h1 {
-      font-size: 14px;
-    }
-    .footer .col ul li {
-      font-size: 13px;
-    }
-}
-@media only screen and (max-width: 340px) {
-  .footer .col {
-    width: 100%;
-  }
-}
- */
