feat(ToyStories):CategoriesList responsive grid

--- a/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.html
+++ b/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.html
@@ -1,8 +1,8 @@
 <div class="categories__wrapper">
-  <div class="category"><a href="">Stuffed Toys</a></div>
-  <div class="category"> <a href=""> Dolls</a></div>
-  <div class="category"><a href="">Lego</a></div>
-  <div class="category"><a href="">Puzzles</a></div>
-  <div class="category"><a href=""> Books</a></div>
-  <div class="category"><a href=""> Others</a></div>
+  <div class="category" id="stuffedToys"><a href="">Stuffed Toys</a></div>
+  <div class="category" id="dolls"> <a href=""> Dolls</a></div>
+  <div class="category" id="lego"><a href="">Lego</a></div>
+  <div class="category" id="puzzles"><a href="">Puzzles</a></div>
+  <div class="category" id="books"><a href=""> Books</a></div>
+  <div class="category" id="others"><a href=""> Others</a></div>
 </div>
