--- a/apps/toy-stories/src/app/homepage/components/hero/hero.component.scss
+++ b/apps/toy-stories/src/app/homepage/components/hero/hero.component.scss
@@ -10,7 +10,7 @@
 .text {
   max-width: 700px;
   margin: 30px 30px 0 0;
-  font-size: 2.5em;
+  font-size: 40px;
   color: #41403e;
   text-align: center;
   line-height: 2em;
@@ -20,4 +20,14 @@
   &__logo {
     width: 100%;
   }
+}
+@media only screen and (max-width: 399.98px) {
+ .text {
+  font-size: 20px;
+ }
+}
+@media (min-width:400px ) and (max-width: 550px) {
+ .text {
+  font-size: 30px;
+ }
 }
