feat(ToyStories): Change img

--- a/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.html
+++ b/apps/toy-stories/src/app/homepage/cointeiners/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header__wrapper">
   <div class="logo">
-    <img class="logo__img" src="../../../../assets/img/Toy stories logo.png" alt="Toy Stories">
+    <img class="logo__img" src="../../../../assets/img/teddy-bear (1).svg" alt="Toy Stories">
   </div>
   <div class="menu">
     <nav class="nav">
