--- a/apps/toy-stories/src/app/homepage/components/hero/hero.component.html
+++ b/apps/toy-stories/src/app/homepage/components/hero/hero.component.html
@@ -1,6 +1,6 @@
 <div class="hero__wrapper">
   <div class="text">Share your toys with others.</div>
   <div class="img">
-    <img src="../../../../assets/img/istockphoto-1271888271-1024x1024.jpg" alt="Toys" class="img__logo">
+    <img src="../../../../assets/img/Happy-baby.svg" alt="Toys" class="img__logo">
   </div>
 </div>
