feat(ToyStories): select img for categories

--- a/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.html
+++ b/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.html
@@ -1,8 +1,26 @@
 <div class="categories__wrapper">
-  <div class="category" id="stuffedToys"><a href="">Stuffed Toys</a></div>
-  <div class="category" id="dolls"> <a href=""> Dolls</a></div>
-  <div class="category" id="lego"><a href="">Lego</a></div>
-  <div class="category" id="puzzles"><a href="">Puzzles</a></div>
-  <div class="category" id="books"><a href=""> Books</a></div>
-  <div class="category" id="others"><a href=""> Others</a></div>
+  <div class="category" id="stuffedToys">
+    <img src="../../../../assets/categories-img/teddy-bear-svgrepo-com.svg" alt="Stuffed Toys">
+    <a href="">Stuffed Toys</a>
+  </div>
+  <div class="category" id="dolls">
+    <img src="../../../../assets/categories-img/doll-svgrepo-com.svg" alt="Dolls">
+    <a href=""> Dolls</a>
+  </div>
+  <div class="category" id="lego">
+    <img src="../../../../assets/categories-img/building-blocks-lego-toy-svgrepo-com.svg" alt="Lego">
+    <a href="">Lego</a>
+  </div>
+  <div class="category" id="puzzles">
+    <img src="../../../../assets/categories-img/puzzle-svgrepo-com.svg" alt="Puzzles">
+    <a href="">Puzzles</a>
+  </div>
+  <div class="category" id="books">
+    <img src="../../../../assets/categories-img/books-svgrepo-com.svg" alt="Books">
+    <a href=""> Books</a>
+  </div>
+  <div class="category" id="others">
+    <img src="../../../../assets/categories-img/baby-puzzle-svgrepo-com.svg" alt="Others">
+    <a href=""> Others</a>
+  </div>
 </div>
