--- a/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.scss
+++ b/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.scss
@@ -2,21 +2,18 @@
   margin: 40px auto;
   width: 90%;
   max-width: 1050px;
-  height: 60vh;
   font-family: Neucha, sans-serif;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas:
-  "stuffedToys dolls lego"
-  "puzzles books others";
+    'stuffedToys dolls lego'
+    'puzzles books others';
   gap: 10px 10px;
-  place-content: center;
 }
 .category {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: inline-block;
+  place-content: center;
   max-width: 300px;
   min-width: 150px;
   height: auto;
@@ -40,51 +37,54 @@
   a {
     text-decoration: none;
     color: #41403e;
-    text-align: center;
+    // text-align: justify;
     display: inline-block;
     font-size: 1.7em;
     font-weight: bold;
   }
+  img {
+    max-width: 50px;
+    padding: 20px;
+  }
 }
-#stuffedToys{
-  grid-area: "stuffedToys";
+#stuffedToys {
+  grid-area: 'stuffedToys';
 }
-#dolls{
-  grid-area: "dolls";
+#dolls {
+  grid-area: 'dolls';
 }
-#lego{
-  grid-area: "lego";
+#lego {
+  grid-area: 'lego';
 }
-#puzzles{
-  grid-area: "puzzles";
+#puzzles {
+  grid-area: 'puzzles';
 }
-#books{
-  grid-area: "books";
+#books {
+  grid-area: 'books';
 }
-#others{
-  grid-area: "stuffedToys";
+#others {
+  grid-area: 'stuffedToys';
 }
-
 @media (max-width: 650px) {
   .categories__wrapper {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows:  1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas:
-     "stuffedToys dolls"
-     "lego puzzles"
-     "books others"
+      'stuffedToys dolls'
+      'lego puzzles'
+      'books others';
   }
 }
 @media only screen and (max-width: 450px) {
   .categories__wrapper {
     grid-template-columns: 1fr;
-    grid-template-rows:  1fr 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
-     "stuffedToys"
-     "dolls"
-     "lego "
-     "puzzles"
-     "books "
-     "others"
+      'stuffedToys'
+      'dolls'
+      'lego '
+      'puzzles'
+      'books '
+      'others';
   }
 }
