--- a/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.html
+++ b/apps/toy-stories/src/app/homepage/cointeiners/categories-list/categories-list.component.html
@@ -1,26 +1,38 @@
 <div class="categories__wrapper">
   <div class="category" id="stuffedToys">
-    <img src="../../../../assets/categories-img/teddy-bear-svgrepo-com.svg" alt="Stuffed Toys">
-    <a href="">Stuffed Toys</a>
+    <a href="" class="category__a">
+      <img src="../../../../assets/categories-img/teddy-bear-svgrepo-com.svg" alt="Stuffed Toys" class="category__img">
+      <p class="category__text">Stuffed Toys</p>
+    </a>
   </div>
   <div class="category" id="dolls">
-    <img src="../../../../assets/categories-img/doll-svgrepo-com.svg" alt="Dolls">
-    <a href=""> Dolls</a>
+    <a href="" class="category__a">
+      <img src="../../../../assets/categories-img/doll-svgrepo-com.svg" alt="Dolls" class="category__img">
+      <div class="category__text">Dolls</div>
+    </a>
   </div>
   <div class="category" id="lego">
-    <img src="../../../../assets/categories-img/building-blocks-lego-toy-svgrepo-com.svg" alt="Lego">
-    <a href="">Lego</a>
+    <a href="" class="category__a">
+      <img src="../../../../assets/categories-img/building-blocks-lego-toy-svgrepo-com.svg" alt="Lego" class="category__img">
+      <div class="category__text">Lego</div>
+    </a>
   </div>
   <div class="category" id="puzzles">
-    <img src="../../../../assets/categories-img/puzzle-svgrepo-com.svg" alt="Puzzles">
-    <a href="">Puzzles</a>
+    <a href="" class="category__a">
+      <img src="../../../../assets/categories-img/puzzle-svgrepo-com.svg" alt="Puzzles" class="category__img">
+      <div class="category__text">Puzzles</div>
+    </a>
   </div>
   <div class="category" id="books">
-    <img src="../../../../assets/categories-img/books-svgrepo-com.svg" alt="Books">
-    <a href=""> Books</a>
+    <a href="" class="category__a">
+      <img src="../../../../assets/categories-img/books-svgrepo-com.svg" alt="Books" class="category__img">
+      <div class="category__text">Books</div>
+    </a>
   </div>
   <div class="category" id="others">
-    <img src="../../../../assets/categories-img/baby-puzzle-svgrepo-com.svg" alt="Others">
-    <a href=""> Others</a>
+    <a href="" class="category__a">
+      <img src="../../../../assets/categories-img/baby-puzzle-svgrepo-com.svg" alt="Others" class="category__img">
+      <div class="category__text">Others</div>
+    </a>
   </div>
 </div>
