feat(ToyStories): make footer responsive

--- a/apps/toy-stories/src/app/homepage/containers/footer/footer.component.html
+++ b/apps/toy-stories/src/app/homepage/containers/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer__wrapper">
-  <div class="col col__social">
+  <div class="col col--social">
     <h1>Social</h1>
     <ul>
       <li><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
@@ -7,25 +7,25 @@
       <li><i class="fa-brands fa-square-instagram fa-2xl "></i></li>
     </ul>
   </div>
-  <div class="col">
+  <div class="col col__dropdown">
     <h1>Company</h1>
-    <ul>
+    <ul class="dropdown-content">
       <li>About</li>
       <li>Mission</li>
       <li>Services</li>
     </ul>
   </div>
-  <div class="col">
+  <div class="col col__dropdown">
     <h1>Products</h1>
-    <ul>
+    <ul class="dropdown-content">
       <li>About</li>
       <li>Mission</li>
       <li>Services</li>
     </ul>
   </div>
-  <div class="col">
+  <div class="col col__dropdown">
     <h1>Support</h1>
-    <ul>
+    <ul class="dropdown-content">
       <li>Contact us</li>
     </ul>
   </div>
