feat(ToyStories): fix responsiveness on footer, hero and categories-list

--- a/apps/toy-stories/src/app/app.component.html
+++ b/apps/toy-stories/src/app/app.component.html
@@ -1,4 +1,6 @@
-<ts-header></ts-header>
-<ts-hero></ts-hero>
-<ts-categories-list></ts-categories-list>
-<ts-footer></ts-footer>
+<div class="container">
+  <ts-header></ts-header>
+  <ts-hero></ts-hero>
+  <ts-categories-list></ts-categories-list>
+  <ts-footer></ts-footer>
+</div>
