--- a/apps/toy-stories/src/app/homepage/components/hero/hero.component.html
+++ b/apps/toy-stories/src/app/homepage/components/hero/hero.component.html
@@ -1,5 +1,7 @@
 <div class="hero__wrapper">
-  <div class="text">Share your toys with others.</div>
+  <div class="text">
+    <p>Share your toys with others.</p>
+   </div>
   <div class="img">
     <img src="../../../../assets/img/Happy-baby.svg" alt="Toys" class="img__logo">
   </div>
