--- a/apps/toy-stories/src/app/homepage/containers/footer/footer.component.scss
+++ b/apps/toy-stories/src/app/homepage/containers/footer/footer.component.scss
@@ -86,12 +86,12 @@
       justify-content: center;
       padding-left: 10px;
      }
-     .col__dropdown {
+   /*   .col__dropdown {
       position: relative;
       display: inline-block;
-    }
+    } */
   }
-    .dropdown-content {
+/*     .dropdown-content {
       display: none;
       position: absolute;
       background-color: #feeaea;
@@ -104,5 +104,5 @@
     }
     .col__dropdown:hover h1 {
       cursor: pointer;
-    }
+    } */
 }
