--- a/apps/toy-stories/src/app/homepage/components/hero/hero.component.scss
+++ b/apps/toy-stories/src/app/homepage/components/hero/hero.component.scss
@@ -8,11 +8,10 @@
 }
 .text {
   max-width: 700px;
-  margin: 30px 30px 0 0;
+  margin: 30px 30px 0 40px;
   font-size: 40px;
   color: #41403e;
   text-align: center;
-  line-height: 2em;
 }
 .img {
   max-width: 350px;
@@ -20,13 +19,11 @@
     width: 100%;
   }
 }
-@media only screen and (max-width: 399.98px) {
- .text {
-  font-size: 20px;
- }
-}
-@media (min-width:400px ) and (max-width: 550px) {
- .text {
-  font-size: 30px;
- }
+@media (max-width: 992px) {
+  .img {
+    display: none;
+  }
+  .text {
+    font-size: 30px;
+  }
 }
