feat(ToyStories): Add colors

--- a/apps/toy-stories/src/app/homepage/components/hero/hero.component.html
+++ b/apps/toy-stories/src/app/homepage/components/hero/hero.component.html
@@ -1,6 +1,6 @@
 <div class="hero__wrapper">
   <div class="text">
-    <p>Share your toys with others.</p>
+    <h1>Share your toys with <span class="text--highlight">others</span></h1>
    </div>
   <div class="img">
     <img src="../../../../assets/img/Happy-baby.svg" alt="Toys" class="img__logo">
