--- a/apps/toy-stories/src/app/homepage/containers/categories-list/categories-list.component.html
+++ b/apps/toy-stories/src/app/homepage/containers/categories-list/categories-list.component.html
@@ -1,36 +1,36 @@
 <div class="categories__wrapper">
   <div class="category" id="stuffedToys">
-    <a href="" class="category__a">
+    <a href="" class="category__a a1">
       <img src="../../../../assets/categories-img/teddy-bear-svgrepo-com.svg" alt="Stuffed Toys" class="category__img">
       <p class="category__text">Stuffed Toys</p>
     </a>
   </div>
   <div class="category" id="dolls">
-    <a href="" class="category__a">
+    <a href="" class="category__a a2">
       <img src="../../../../assets/categories-img/doll-svgrepo-com.svg" alt="Dolls" class="category__img">
       <div class="category__text">Dolls</div>
     </a>
   </div>
   <div class="category" id="lego">
-    <a href="" class="category__a">
+    <a href="" class="category__a a3">
       <img src="../../../../assets/categories-img/building-blocks-lego-toy-svgrepo-com.svg" alt="Lego" class="category__img">
       <div class="category__text">Lego</div>
     </a>
   </div>
   <div class="category" id="puzzles">
-    <a href="" class="category__a">
+    <a href="" class="category__a a4">
       <img src="../../../../assets/categories-img/puzzle-svgrepo-com.svg" alt="Puzzles" class="category__img">
       <div class="category__text">Puzzles</div>
     </a>
   </div>
   <div class="category" id="books">
-    <a href="" class="category__a">
+    <a href="" class="category__a a5">
       <img src="../../../../assets/categories-img/books-svgrepo-com.svg" alt="Books" class="category__img">
       <div class="category__text">Books</div>
     </a>
   </div>
   <div class="category" id="others">
-    <a href="" class="category__a">
+    <a href="" class="category__a a6">
       <img src="../../../../assets/categories-img/baby-puzzle-svgrepo-com.svg" alt="Others" class="category__img">
       <div class="category__text">Others</div>
     </a>
