--- a/apps/toy-stories/src/app/homepage/containers/categories-list/categories-list.component.scss
+++ b/apps/toy-stories/src/app/homepage/containers/categories-list/categories-list.component.scss
@@ -36,6 +36,24 @@
     font-weight: bold;
     padding: 0.75rem;
   }
+  .a1{
+    background-color: #5db0c22b;
+  }
+  .a2{
+    background-color: blanchedalmond;
+  }
+  .a3{
+    background-color: #ff87897f;
+  }
+  .a4{
+    background-color: blanchedalmond;
+  }
+  .a5{
+    background-color: #5dafc2;
+  }
+  .a6{
+    background-color:blanchedalmond;
+  }
   a:hover {
     box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px -5px;
     transform: translate3d(0, 2px, 0);
