--- a/apps/toy-stories/src/app/app.component.scss
+++ b/apps/toy-stories/src/app/app.component.scss
@@ -1,3 +1,7 @@
+.container{
+  background-color: aliceblue;
+  padding: 20px;
+}
 @media (min-width: 1200px) {
   .container {
     max-width: 900px;
