--- a/apps/toy-stories/src/app/homepage/containers/header/header.component.scss
+++ b/apps/toy-stories/src/app/homepage/containers/header/header.component.scss
@@ -14,10 +14,6 @@
   flex: 1;
   &__img {
     min-height: 100px;
-    //max-width: 115px;
-    //border-radius: 66% 16% 53% 24%; // Irregular shape
-
-
     position: relative;
     top: 50%;
     transform: translateY(-50%);
@@ -108,8 +104,43 @@
     box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
   }
 }
-@media (max-width: 992px){
-.logo{
+.hamburger-menu {
   display: none;
 }
+@media (max-width: 992px) {
+  .logo {
+    display: none;
+  }
+}
+@media (max-width: 550px) {
+  .hamburger-menu {
+    display: inline-block;
+    margin-left: 40px;
+    height: 50px;
+    width: 50px;
+    overflow: hidden;
+    background-color: #ff87897f;
+    border: solid black 2px;
+  }
+  #hidden-nav {
+    display: none;
+    height: 100vh;
+    left: 0;
+    background-color: aliceblue;
+    &.is-open {
+      display: flex;
+      position: absolute;
+      top: 100px;
+      flex-direction: column;
+      width: 100%;
+      justify-content: start;
+      a {
+        width: 300px;
+        margin: 4px 0;
+      }
+    }
+  }
+  .menu {
+    justify-content: center;
+  }
 }
