--- a/apps/toy-stories/src/app/homepage/containers/header/header.component.html
+++ b/apps/toy-stories/src/app/homepage/containers/header/header.component.html
@@ -7,7 +7,7 @@
       <mat-icon>{{isMenuOpen? "close": "menu"}}</mat-icon>
     </button>
     <nav class="nav">
-      <ul class="nav__ul" [class.is-open]="isMenuOpen" [class.is-open]="isMenuOpen" id="hidden-nav">
+      <ul class="nav__ul" [class.is-open]="isMenuOpen" [class.is-open]="isMenuOpen">
         <li><a class="nav__a" href=#>Home</a></li>
         <li><a class="nav__a" href=#>About</a></li>
         <li><a class="nav__a" href=#>Contact</a></li>
